--- a/3FingerPrints/3FingerPrints.html
+++ b/3FingerPrints/3FingerPrints.html
@@ -23,17 +23,18 @@
 <div class="mySlides" style="text-align: center;"><img src="3FingerPrints3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="3FingerPrints4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="3FingerPrints5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="3FingerPrints6.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Can't find a web site, they hit the scene around 1997.
+Can't find much about them, they hit the scene around 1997.
 </p><p>
 Titles
 </p><p>
 <li><a href="3FingerPrints1.jpg">The 3 Geeks</a> (1997)
-<li>Geeksville 	(1999)
+<li><a href="3FingerPrints6.jpg">Geeksville</a> (1999)
 <li><a href="3FingerPrints4.jpg">How to Pick Up Girls If You're a Comic Book Geek</a> (1997)
 <li><a href="3FingerPrints5.jpg">Zombies Vs. Cheerleaders</a> (2013)
 </p>
