--- a/AListComics/AListComics.html
+++ b/AListComics/AListComics.html
@@ -36,16 +36,16 @@
 </p><p>
 Titles
 </p><p>
-<li>Flamingo (1998)
-<li>Jumbo Comics (1999)
-<li>Jungle Comics (1997)
-<li>LA Confidential (1997)
-<li>The March Hare (1998)
-<li>Planet Comics (1997)
-<li>Pulp Fiction (1997)
-<li>Scream Comics (1998)
-<li>Will Eisner's Heroes of Sports (1999)
-<li>Wings Comics (1997)
+<li><a href="AListComics1.jpg">Flamingo</a> (1998)
+<li><a href="AListComics2.jpg">Jumbo Comics</a> (1999)
+<li><a href="AListComics3.jpg">Jungle Comics</a> (1997)
+<li><a href="AListComics4.jpg">LA Confidential</a> (1997)
+<li><a href="AListComics5.jpg">The March Hare</a> (1998)
+<li><a href="AListComics6.jpg">Planet Comics</a> (1997)
+<li><a href="AListComics7.jpg">Pulp Fiction</a> (1997)
+<li><a href="AListComics8.jpg">Scream Comics</a> (1998)
+<li><a href="AListComics9.jpg">Will Eisner's Heroes of Sports</a> (1999)
+<li><a href="AListComics10.jpg">Wings Comics</a> (1997)
 </p>
 
 </body>
