--- a/FirstSalvoProductions/FirstSalvoProductions.html
+++ b/FirstSalvoProductions/FirstSalvoProductions.html
@@ -21,6 +21,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Contract1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Contract2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Contract3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Contract4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DangersDozen1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DangersDozen2.jpg"></div>
 
@@ -28,14 +29,13 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-First Salvo hit the scene in 2007. http://firstsalvo.com/index.htm
+<a href="http://firstsalvo.com/index.htm">First Salvo</a> hit the scene in 2007.
 </p><p>
 Titles
 </p><p>
-<li>Contract (2008)
-<li>Contract Free Comic Book Day (2009)
-<li>Contract Solo Missions: Jessie (2008)
-<li>The Danger's Dozen (2007)
+<li><a href="Contract1.jpg">Contract</a> (2008)
+<li><a href="Contract4.jpg">Contract Solo Missions: Jessie</a> (2008)
+<li><a href="DangersDozen1.jpg">The Danger's Dozen</a> (2007)
 </p>
 
 </body>
