--- a/index.html
+++ b/index.html
@@ -1384,6 +1384,13 @@
 </tr>
 
 <tr>
+<td>Acropolis Arts</td>
+<td>1996</td>
+<td>Publisher</td>
+<td><a href="AcropolisArts/AcropolisArts.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Action Comics</td>
 <td>1938</td>
 <td>DC</td>
@@ -11824,6 +11831,20 @@
 </tr>
 
 <tr>
+<td>Contract</td>
+<td>2008</td>
+<td>First Salvo</td>
+<td><a href="FirstSalvoProductions/FirstSalvoProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Contract Solo Missions: Jessie</td>
+<td>2008</td>
+<td>First Salvo</td>
+<td><a href="FirstSalvoProductions/FirstSalvoProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Contract with God</td>
 <td>1978</td>
 <td>Baronet Books</td>
@@ -13040,6 +13061,13 @@
 <td>2009</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Danger's Dozen</td>
+<td>2008</td>
+<td>First Salvo</td>
+<td><a href="FirstSalvoProductions/FirstSalvoProductions.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17981,6 +18009,13 @@
 <td>2002</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Flamingo</td>
+<td>1998</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24284,6 +24319,13 @@
 </tr>
 
 <tr>
+<td>Jumbo Comics</td>
+<td>1999</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jungle Action</td>
 <td>1954</td>
 <td>Atlas</td>
@@ -24295,6 +24337,13 @@
 <td>1940</td>
 <td>Fiction House</td>
 <td><a href="JungleComics/JungleComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jungle Comics</td>
+<td>1997</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25373,6 +25422,13 @@
 <td>1918</td>
 <td>Creator</td>
 <td><a href="LBCole/LBCole.html">Details</a></td>
+</tr>
+
+<tr>
+<td>LA Confidential</td>
+<td>1997</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27418,6 +27474,13 @@
 <td>1971</td>
 <td>Creator</td>
 <td><a href="MarcBell/MarcBell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>March Hare</td>
+<td>1998</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32852,6 +32915,13 @@
 
 <tr>
 <td>Planet Comics</td>
+<td>1997</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Planet Comics</td>
 <td>2020</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
@@ -33687,6 +33757,13 @@
 <td>1958</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pulp Fiction</td>
+<td>1997</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36105,6 +36182,13 @@
 <td>2008</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Scream Comics</td>
+<td>1998</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43387,6 +43471,13 @@
 </tr>
 
 <tr>
+<td>Will Eisner's Heros Of Sports</td>
+<td>1999</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Will Elder</td>
 <td>1921</td>
 <td>Creator</td>
@@ -43482,6 +43573,13 @@
 <td>1992</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wings Comics</td>
+<td>1997</td>
+<td>A List Comics</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
 </tr>
 
 <tr>
