--- a/index.html
+++ b/index.html
@@ -9944,6 +9944,13 @@
 </tr>
 
 <tr>
+<td>Cartoonist Kayfabe</td>
+<td>2018</td>
+<td>YouTube</td>
+<td><a href="CartoonistKayfabe/CartoonistKayfabe.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Carvers</td>
 <td>1998</td>
 <td>Image</td>
