--- a/WildstormProductions/WildstormProductions.html
+++ b/WildstormProductions/WildstormProductions.html
@@ -30,6 +30,16 @@
 <div class="mySlides" style="text-align: center;"><img src="WS8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WS9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WS10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WS20.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
