--- a/index.html
+++ b/index.html
@@ -8047,6 +8047,13 @@
 </tr>
 
 <tr>
+<td>Blaring House</td>
+<td>2012</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blaze</td>
 <td>1994</td>
 <td>Marvel</td>
@@ -10859,6 +10866,13 @@
 </tr>
 
 <tr>
+<td>Chimo</td>
+<td>2011</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>China Sea</td>
 <td>1989</td>
 <td>Aircel</td>
@@ -11529,6 +11543,13 @@
 </tr>
 
 <tr>
+<td>Collected Neil The Horse</td>
+<td>2017</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Collier's</td>
 <td>2001</td>
 <td>Drawn &amp; Quarterly</td>
@@ -12070,8 +12091,22 @@
 <tr>
 <td>Contractors</td>
 <td>1987</a>
-<td>Eclipse
+<td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Conundrum Magazine</td>
+<td>2020</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Conundrum Press</td>
+<td>1996</a>
+<td>Publisher</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15328,6 +15363,20 @@
 <td>1978</td>
 <td>Abbeville</td>
 <td><a href="AbbevillePress/AbbevillePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Don't Get Eaten By Anything</td>
+<td>2015</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Don't Get Lonely Don't Get Lost</td>
+<td>2010</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20059,6 +20108,13 @@
 <td>1976</td>
 <td>Gredown</td>
 <td><a href="GhostsOfTerror/GhostsOfTerror.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ghosts We Know</td>
+<td>2016</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26012,6 +26068,13 @@
 </tr>
 
 <tr>
+<td>Langosh &amp; Peppi: Fugitive Days</td>
+<td>2019</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Larry Gonick</td>
 <td>1946</td>
 <td>Creator</td>
@@ -29778,6 +29841,13 @@
 </tr>
 
 <tr>
+<td>Mister Morgen</td>
+<td>2017</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mister Mystery</td>
 <td>1951</td>
 <td>Stanley Morse</td>
@@ -30065,41 +30135,6 @@
 </tr>
 
 <tr>
-<td>More Collected Adventures of Captain Jack</a>
-<td>1996</td>
-<td>MU Press</td>
-<td><a href="MUPress/MUPress.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Morty The Dog</a>
-<td>1991</td>
-<td>MU Press</td>
-<td><a href="MUPress/MUPress.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Motel Hell</td>
-<td>2010</td>
-<td>IDW</td>
-<td><a href="IDW/IDW.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Moth &amp; Whisper</td>
-<td>2018</td>
-<td>Aftershock</td>
-<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Motorcycle Samurai: FCBD</td>
-<td>2015</td>
-<td>IDW</td>
-<td><a href="IDW/IDW.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Monty Python</td>
 <td>1969</td>
 <td>BBC</td>
@@ -30217,6 +30252,12 @@
 <td>Comico</td>
 <td><a href="Comico/Comico.html">Details</a></td>
 </tr>
+<tr>
+<td>More Collected Adventures of Captain Jack</a>
+<td>1996</td>
+<td>MU Press</td>
+<td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Mort Drucker</td>
@@ -30238,6 +30279,34 @@
 <td>Midway</td>
 <td><a href="MortalKombat/MortalKombat.html">Details</a></td>
 </tr>
+<tr>
+
+<td>Mortigan Goth</td>
+<td>1993</td>
+<td>Marvel</td>
+<td><a href="MortiganGoth/MortiganGoth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Morton</td>
+<td>2017</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Morty The Dog</a>
+<td>1991</td>
+<td>MU Press</td>
+<td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Motel Hell</td>
+<td>2010</td>
+<td>IDW</td>
+<td><a href="IDW/IDW.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Motel Universe</td>
@@ -30247,17 +30316,17 @@
 </tr>
 
 <tr>
-<td>Mortigan Goth</td>
-<td>1993</td>
-<td>Marvel</td>
-<td><a href="MortiganGoth/MortiganGoth.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Moth</td>
 <td>2004</td>
 <td>Dark Horse</td>
 <td><a href="Moth/Moth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Moth &amp; Whisper</td>
+<td>2018</td>
+<td>Aftershock</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30272,6 +30341,13 @@
 <td>2016</td>
 <td>Image</td>
 <td><a href="MotorCrush/MotorCrush.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Motorcycle Samurai: FCBD</td>
+<td>2015</td>
+<td>IDW</td>
+<td><a href="IDW/IDW.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32803,6 +32879,13 @@
 </tr>
 
 <tr>
+<td>Palace Of Champions</td>
+<td>2016</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Palefire</td>
 <td>2008</td>
 <td>Secret Acres</td>
@@ -32870,6 +32953,13 @@
 <td>1942</td>
 <td>Publisher</td>
 <td><a href="PantheonBooks/pantheonbooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Papercut Heart: A Book Of Zines</td>
+<td>2012</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38492,6 +38582,13 @@
 </tr>
 
 <tr>
+<td>Song Of Roland</td>
+<td>2012</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Songs Of The Abyss</td>
 <td>2008</td>
 <td>Secret Acres</td>
@@ -38713,6 +38810,13 @@
 <td>2008</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spain &amp; Morocco</td>
+<td>2014</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41180,6 +41284,13 @@
 </tr>
 
 <tr>
+<td>This Is Serious: Canadian Indie Comics</td>
+<td>2019</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>This Is Suspense</td>
 <td>1955</td>
 <td>Charlton</td>
@@ -42482,6 +42593,13 @@
 </tr>
 
 <tr>
+<td>Unexpergated Tale Of Lordie Jones</td>
+<td>2010</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Unfollow</td>
 <td>2015</td>
 <td>Vertigo</td>
@@ -42605,6 +42723,13 @@
 <td>2019</td>
 <td>Ablaze</td>
 <td><a href="AblazePublishing/AblazePublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Unspent Love, Or, Things I Wish I Told You</td>
+<td>2012</a>
+<td>Conundrum Press</td>
+<td><a href="ConundrumPress/ConundrumPress.html">Details</a></td>
 </tr>
 
 <tr>
