--- a/index.html
+++ b/index.html
@@ -1601,6 +1601,13 @@
 </tr>
 
 <tr>
+<td>Adolescent Radioactive Black Belt Hamsters</td>
+<td>2008</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adrenalynn: Weapon Of War</td>
 <td>1996</td>
 <td>Image</td>
@@ -1873,6 +1880,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Red Sonja</td>
+<td>2005</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Simone &amp; Ajax</td>
 <td>1998</td>
 <td>Arrow</td>
@@ -1968,6 +1982,13 @@
 <td>2017</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>After Earth: Innocence</td>
+<td>2012</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2087,6 +2108,13 @@
 <td>2001</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Agent 47: Birth Of The Hitman</td>
+<td>2017</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2562,6 +2590,20 @@
 </tr>
 
 <tr>
+<td>Alice Cooper</td>
+<td>2014</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alice Cooper vs. Chaos!</td>
+<td>2015</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alice In Sexland</td>
 <td>2001</td>
 <td>Fantagraphics</td>
@@ -2712,6 +2754,13 @@
 <td>1986</td>
 <td>Fox</td>
 <td><a href="Aliens/Aliens.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens Vampirella</td>
+<td>2015</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6541,6 +6590,20 @@
 <td>1995</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battlestar Galactica</td>
+<td>2013</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battlestar Galactica: The Death Of Apollo</td>
+<td>2014</td>
+<td>Dynamite</td>
+<td><a href="Dynamite/Dynamite.html">Details</a></td>
 </tr>
 
 <tr>
