--- a/Dynamite/Dynamite.html
+++ b/Dynamite/Dynamite.html
@@ -464,7 +464,7 @@ Titles
 <li><a href="../Centipede/Centipede.html">Centipede</a> (2017)
 <li><a href="Dynamite59.jpg">Chaos  </a> (2014)
 <li><a href="Dynamite60.jpg">Chaos! Holiday Special</a> (2014)
-<li><a href="Dynamite61.jpg">Chaos!: Bad Kitty one-Shot     </a> (2014)
+<li><a href="Dynamite61.jpg">Chaos!: Bad Kitty  </a> (2014)
 <li><a href="Dynamite62.jpg">Charlie's Angels   </a> (2018)
 <li><a href="Dynamite63.jpg">Charlie's Angels vs. the Bionic Woman  </a> (2019)
 <li><a href="Dynamite64.jpg">Chastity   </a> (2014)
@@ -521,9 +521,9 @@ Titles
 <li><a href="Dynamite115.jpg">Flash Gordon: Kings Cross  </a> (2016)
 <li><a href="Dynamite116.jpg">Flash Gordon: Zeitgeist    </a> (2011)
 <li><a href="Dynamite117.jpg">Galactica 1980     </a> (2009)
+<li><a href="Dynamite120.jpg">George R. R. Martin's A Clash of Kings  </a> (2017)
 <li><a href="Dynamite118.jpg">George R. R. Martin's A Game of Thrones    </a> (2011)
 <li><a href="Dynamite119.jpg">George R. R. Martin's Wild Cards: The Hard Call    </a> (2010)
-<li><a href="Dynamite120.jpg">George R.R. Martin's A Clash of Kings  </a> (2017)
 <li><a href="Dynamite121.jpg">Giant-Size Red Sonja   </a> (2007)
 <li><a href="Dynamite122.jpg">Gold Key: Alliance  </a> (2016)
 <li><a href="Dynamite123.jpg">Good the Bad and the Ugly  </a> (2009)
