--- a/Dynamite/Dynamite.html
+++ b/Dynamite/Dynamite.html
@@ -403,8 +403,6 @@ In July 2016, prior to Comic-Con International, The New York Times ran a story a
 Titles
 </p><p>
 
-<li><a href="Dynamite1.jpg">(Classic) Battlestar Galactica  </a> (2013)
-<li><a href="Dynamite2.jpg">(Classic) Battlestar Galactica: The Death of Apollo    </a> (2014)
 <li><a href="Dynamite3.jpg">Adolescent Radioactive Black Belt Hamsters     </a> (2008)
 <li><a href="Dynamite4.jpg">Adventures of Red Sonja    </a> (2005)
 <li><a href="Dynamite5.jpg">After Earth: Innocence     </a> (2012)
@@ -438,6 +436,8 @@ Titles
 <li><a href="Dynamite33.jpg">Barbarella/Dejah Thoris    </a> (2019)
 <li><a href="Dynamite34.jpg">Battlefields   </a> (2009)
 <li><a href="Dynamite35.jpg">Battlestar Galactica   </a> (2006)
+<li><a href="Dynamite1.jpg">Battlestar Galactica  </a> (2013)
+<li><a href="Dynamite2.jpg">Battlestar Galactica: The Death of Apollo </a> (2014)
 <li><a href="Dynamite36.jpg">Bettie Page </a> (2017)
 <li><a href="Dynamite37.jpg">Bettie Page Unbound    </a> (2019)
 <li><a href="Dynamite38.jpg">Betty Boop  </a> (2016)
@@ -476,7 +476,7 @@ Titles
 <li><a href="Dynamite70.jpg">Cryptozoic Man     </a> (2013)
 <li><a href="Dynamite71.jpg">Damnation of Charlie Wormwood  </a> (2014)
 <li><a href="Dynamite72.jpg">Damsels  </a> (2012)
-<li><a href="Dynamite73.jpg">Damsels Giant Killer One Shot  </a> (2013)
+<li><a href="Dynamite73.jpg">Damsels: Giant Killer </a> (2013)
 <li><a href="Dynamite74.jpg">Damsels: Mermaids  </a> (2013)
 <li><a href="Dynamite75.jpg">Dan Dare Omnibus   </a> (2009)
 <li><a href="Dynamite76.jpg">Danger Girl and the Army of Darkness   </a> (2011)
@@ -650,7 +650,7 @@ Titles
 <li><a href="Dynamite244.jpg">Pathfinder: Goblins!   </a> (2013)
 <li><a href="Dynamite245.jpg">Pathfinder: Origins    </a> (2015)
 <li><a href="Dynamite246.jpg">Pathfinder: Worldscape     </a> (2016)
-<li><a href="Dynamite247.jpg">Patricia Briggs' Alpha and Omega Cry Wolf Volume One   </a> (2010)
+<li><a href="Dynamite247.jpg">Patricia Briggs' Alpha and Omega Cry Wolf </a> (2010)
 <li><a href="Dynamite248.jpg">Patricia Briggs' Mercy Thompson: Hopcross Jilly    </a> (2015)
 <li><a href="Dynamite249.jpg">Patricia Briggs' Mercy Thompson: Moon Called   </a> (2010)
 <li><a href="Dynamite250.jpg">Peter Cannon: Thunderbolt  </a> (2012)
