--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -283,6 +283,7 @@ Titles
 <li><a href="../DanielClowes/DanielClowes.html">Like a Velvet Glove Cast in Iron</a> (1993)
 <li><a href="../AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html">Little Orphan Annie</a> (1987)
 <li><a href="Fantagraphics91.jpg">Locas</a> (2004)
+<li><a href="../LooseTeeth/LooseTeeth.html">Loose Teeth</a> (1991)
 <li><a href="../LoveAndRockets/LoveAndRockets.html">Love and Rockets</a> (1982)
 <li><a href="Fantagraphics92.jpg">Love That Bunch</a> (1990)
 <li><a href="Fantagraphics93.jpg">Maggie and Hopey</a> (1997)
@@ -320,6 +321,7 @@ Titles
 <li><a href="Fantagraphics117.jpg">Shadowland</a> (1989)
 <li><a href="Fantagraphics118.jpg">Snake Eyes</a> (1990)
 <li><a href="Fantagraphics119.jpg">Steve Ditko Archives</a> (2014)
+<li><a href="../Stickboy/Stickboy.html">Stickboy</a> (1991)
 <li><a href="Fantagraphics120.jpg">Stinz</a> (1989)
 <li><a href="Fantagraphics121.jpg">Stuff of Dreams</a> (2002)   
 <li><a href="Fantagraphics122.jpg">Submit!</a> (2007)
