--- a/index.html
+++ b/index.html
@@ -28623,6 +28623,13 @@
 </tr>
 
 <tr>
+<td>Loose Teeth</td>
+<td>1991</td>
+<td>Fantagraphics</td>
+<td><a href="LooseTeeth/LooseTeeth.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lord Of The Jungle</td>
 <td>2012</td>
 <td>Dynamite</td>
@@ -41828,6 +41835,13 @@
 <td>2003</td>
 <td>About Comics</td>
 <td><a href="AboutComics/AboutComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Stickboy</td>
+<td>1991</td>
+<td>Fantagraphics</td>
+<td><a href="Stickboy/Stickboy.html">Details</a></td>
 </tr>
 
 <tr>
