--- a/AdHouse/AdHouse.html
+++ b/AdHouse/AdHouse.html
@@ -19,20 +19,44 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="AdHouse1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../DuncanTheWonderDog/Duncan1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdHouse2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdHouse3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdHouse4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdHouse5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../DuncanTheWonderDog/Duncan1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdHouse6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdHouse7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AdHouse8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdHouse32.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-AdHouse Books is an independent comic book publisher based in Richmond, Virginia. It was founded in 2002 by graphic designer Chris Pitzer. Adhouse is known primarily as a publisher of graphic novels, beginning with 2002's Pulpatoon: Pilgrimage, traditional comic book series, and art books, including James Jean's Process Recess.
+<a href="https://adhousebooks.com/">AdHouse Books</a> is an independent comic book publisher based in Richmond, Virginia. It was founded in 2002 by graphic designer Chris Pitzer. Adhouse is known primarily as a publisher of graphic novels, beginning with 2002's Pulpatoon: Pilgrimage, traditional comic book series, and art books, including James Jean's Process Recess.
 </p><p>
 In 2004, AdHouse's Project: Telstar received Domtar Paper's Kudos Award for Excellence. The anthology was also nominated for several other awards, including Best Anthology and Special Award for Excellence in Presentation by the Harvey Awards, and Best Anthology and Best Publication Design by the Eisner Awards.
 </p><p>
@@ -40,32 +64,39 @@ AdHouse's first publication, Pulpatoon Pilgrimage, won the 2002 Small Press Expo
 </p><p>
 Titles
 </p><p>
+<li><a href="AdHouse11.jpg">Afrodisiac</a> (2009)
+<li><a href="AdHouse12.jpg">And There You Are</a> (2009)
+<li><a href="AdHouse13.jpg">Aviary</a> (2007)
 <li><a href="AdHouse4.jpg">Bumperboy and the Loud, Loud Mountain</a> (2006)
 <li><a href="AdHouse1.jpg">Cankor</a> (2020)
-<li>Collected Sequential (2004)
+<li><a href="AdHouse5.jpg">Delusional</a> (2010)
+<li><a href="AdHouse10.jpg">Driven By Lemons</a> (2019)
 <li><a href="../DuncanTheWonderDog/DuncanTheWonderDog.html">Duncan the Wonder Dog</a> (2010)
-<li>FREE Comic Book Day Comic Book (2004)
-<li>Monkey &amp; Spoon (2004) 
-<li>Mort Grim (2005) by Doug Fraser
-<li>My Own Little Empire (2003) 
-<li>Noble Boy (2006)
-<li>One Step After Another (2004
-<li>Pink, Vol. 1: GRRR! (2004)
-<li>Pink, Vol. 2: Cheese (2004) 
-<li>Preposterous Adventures of IronHide Tom (2006)
-<li>Process Recess (2005)
-<li>Project: Romantic (2006)
-<li>Project: Superior (2005)
-<li>Project: Telstar (2004) 
-<li>Pulpatoon Pilgrimage (2002) 
-<li>Return of the Elephant (2004)
-<li>Salamander Dream (2005)
-<li>Secret Voice (2005)
-<li>Skyscrapers of the Midwest (2004) 
-<li>Southpaw (2004)
+<li><a href="AdHouse6.jpg">Expansion</a> (2017)
+<li><a href="AdHouse9.jpg">FCHS Free Comic Book Day</a> (2009)
+<li><a href="AdHouse7.jpg">Freak</a> (2019)
+<li><a href="AdHouse14.jpg">Johnny Hiro</a> (2007)
+<li><a href="AdHouse15.jpg">Meeting Comics</a> (2020)
+<li><a href="AdHouse16.jpg">Mesmo Delivery</a> (2008)
+<li><a href="AdHouse8.jpg">NMIK <a/>(2020)
+<li><a href="AdHouse17.jpg">Pope Hats</a> (2011)
+<li><a href="AdHouse18.jpg">Preposterous Voyages of IronHide Tom</a> (2006)
+<li><a href="AdHouse19.jpg">Project: Romantic</a> (2006)
+<li><a href="AdHouse20.jpg">Remake</a> (2009) 
+<li><a href="AdHouse21.jpg">Return of the Elephant</a> (2004)
+<li><a href="AdHouse22.jpg">Ride Home</a> (2007)
+<li><a href="AdHouse23.jpg">Secret Voice</a> (2005)
+<li><a href="AdHouse24.jpg">Skyscrapers of the Midwest</a> (2004)
+<li><a href="AdHouse25.jpg">Southpaw</a> (2004)
 <li><a href="../StreetAngel/StreetAngel.html">Street Angel</a> (2015)
-<li>Superior Showcase (2005) 
-<li>Zig Zag (2005)
+<li><a href="AdHouse26.jpg">Superior Showcase</a> (2005)
+<li><a href="AdHouse27.jpg">THB: Comics from Mars</a> (2007)
+<li><a href="AdHouse28.jpg">Tiger! Tiger! Tiger!</a> (2008)
+<li><a href="AdHouse29.jpg">Ur</a> (2014)
+<li><a href="AdHouse30.jpg">Welcome To Oddville</a> (2011)
+<li><a href="AdHouse31.jpg">Young Francis</a> (2018)
+<li><a href="AdHouse32.jpg">Youth Is Wasted: A Collection of Comics</a> (2014)
+
 </p>
 
 </body>
