--- a/index.html
+++ b/index.html
@@ -1985,6 +1985,13 @@
 </tr>
 
 <tr>
+<td>Afrodisiac</td>
+<td>2009</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>After Earth: Innocence</td>
 <td>2012</td>
 <td>Dynamite</td>
@@ -4112,6 +4119,13 @@
 <td>1904</td>
 <td>Cupples &amp; Leon</td>
 <td><a href="AndHerNameWasMaud/AndHerNameWasMaud.html">Details</a></td>
+</tr>
+
+<tr>
+<td>And There You Are</td>
+<td>2009</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9761,6 +9775,13 @@
 </tr>
 
 <tr>
+<td>Bumperboy</td>
+<td>2006</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bumperhead</td>
 <td>2014</td>
 <td>Drawn &amp; Quarterly</td>
@@ -10017,6 +10038,13 @@
 <td>1990</td>
 <td>Marvel</td>
 <td><a href="CampCandy/CampCandy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cancor</td>
+<td>2020</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15093,6 +15121,13 @@
 </tr>
 
 <tr>
+<td>Delusional</td>
+<td>2010</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Demon</td>
 <td>1972</td>
 <td>DC</td>
@@ -16661,6 +16696,13 @@
 </tr>
 
 <tr>
+<td>Driven By Lemons</td>
+<td>2019</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Drones</td>
 <td>2015</td>
 <td>IDW</td>
@@ -17998,6 +18040,13 @@
 </tr>
 
 <tr>
+<td>Expansion</td>
+<td>2017</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Expatriate</td>
 <td>2005</td>
 <td>Image</td>
@@ -18611,6 +18660,13 @@
 <td>2013</td>
 <td>Vertigo</td>
 <td><a href="FBP/FBP.html">Details</a></td>
+</tr>
+
+<tr>
+<td>FCHS Free Comic Book Day</td>
+<td>2009</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19646,6 +19702,13 @@
 <td>2001</td>
 <td>Dark Horse</td>
 <td><a href="Fray/Fray.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Freak</td>
+<td>2019</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25816,6 +25879,13 @@
 </tr>
 
 <tr>
+<td>Johnny Hiro</td>
+<td>2007</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Johnny Nemo Magazine</a></td>
 <td>1985</td>
 <td>Eclipse</td>
@@ -30689,6 +30759,13 @@
 </tr>
 
 <tr>
+<td>Meeting Comics</td>
+<td>2020</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mega Drive</td>
 <td>2012</td>
 <td>Creator</td>
@@ -30860,6 +30937,13 @@
 <td>1971</td>
 <td>Last Gasp</td>
 <td><a href="LastGasp/LastGasp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mesmo Delivery</td>
+<td>2008</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33530,6 +33614,13 @@
 </tr>
 
 <tr>
+<td>NMIK</td>
+<td>2020</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>No Ducks!</td>
 <td>1977</td>
 <td>Last Gasp</td>
@@ -35578,6 +35669,13 @@
 </tr>
 
 <tr>
+<td>Pope Hats</td>
+<td>2011</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Popeye</td>
 <td>1929</td>
 <td>King Features</td>
@@ -35900,6 +35998,13 @@
 </tr>
 
 <tr>
+<td>Preposterous Voyages Of IronHide Tom</td>
+<td>2006</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Present</td>
 <td>2017</td>
 <td>Drawn &amp; Quarterly</td>
@@ -36134,6 +36239,13 @@
 <td>2009</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Project: Romantic</td>
+<td>2006</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37144,6 +37256,13 @@
 </tr>
 
 <tr>
+<td>Remake</td>
+<td>2009</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rembrandt</td>
 <td>1606</td>
 <td>Creator</td>
@@ -37246,6 +37365,13 @@
 <td>2010</td>
 <td>Archaia</td>
 <td><a href="ReturnOfTheDapperMen/ReturnOfTheDapperMen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Return Of The Elephant</td>
+<td>2004</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37498,6 +37624,13 @@
 <td>2005</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ride Home</td>
+<td>2007</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -39199,6 +39332,13 @@
 </tr>
 
 <tr>
+<td>Secret Voice</td>
+<td>2005</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Secret War</td>
 <td>2004</td>
 <td>Marvel</td>
@@ -40381,6 +40521,13 @@
 </tr>
 
 <tr>
+<td>Skyscrapers Of The Midwest</td>
+<td>2004</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Skywald</td>
 <td>1970</td>
 <td>Publisher</td>
@@ -40785,6 +40932,13 @@
 <td>1987</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Southpaw</td>
+<td>2004</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42189,6 +42343,13 @@
 
 <tr>
 <td>Street Angel</td>
+<td>2015</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Street Angel</td>
 <td>2017</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
@@ -42549,6 +42710,13 @@
 <td>2016</td>
 <td>DC</td>
 <td><a href="DCComics/DCComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Superior Showcase</td>
+<td>2005</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43476,6 +43644,13 @@
 </tr>
 
 <tr>
+<td>THB: Comics From Mars</td>
+<td>2007</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>They Live</td>
 <td>1988</td>
 <td>Universal</td>
@@ -43690,6 +43865,13 @@
 <td>2000</td>
 <td>Creator</td>
 <td><a href="TiaRoxae/TiaRoxae.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tiger! Tiger! Tiger!</td>
+<td>2008</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -45135,6 +45317,13 @@
 </tr>
 
 <tr>
+<td>Ur</td>
+<td>2014</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ur-Quan Masters</td>
 <td>1990</td>
 <td>Accolade</td>
@@ -46539,6 +46728,13 @@
 <td>2008</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Welcome To Oddville</td>
+<td>2011</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47949,6 +48145,13 @@
 </tr>
 
 <tr>
+<td>Young Francis</td>
+<td>2018</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Young Hearts</td>
 <td>1949</td>
 <td>Marvel</td>
@@ -48002,6 +48205,13 @@
 <td>1992</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Youth Is Wasted: A Collection Of Comics</td>
+<td>2014</td>
+<td>AdHouse</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
