--- a/Alterna/Alterna.html
+++ b/Alterna/Alterna.html
@@ -47,49 +47,31 @@ Titles
 <li><a href="Alterna1.jpg">Actual Roger</a> (2019)
 <li><a href="Alterna2.jpg">Adam Wreck</a>  (2017)
 <li><a href="Alterna3.jpg">Adventures of Mr. Crypt and Baron Rat</a>   (2019)
-<li>All My Ghosts   (2016)
-<li>All-Star FUBAR  (2018)
-<li>Alterna Anniverseries Anthology     (2016)
 <li><a href="Alterna4.jpg">Alterna Giants: Blood Realm</a> (2020)
-<li>Alterna Giants: Mighty Mascots  (2020)
 <li><a href="Alterna5.jpg">Amazing Age</a>     (2017)
-<li>American Terror     (2008)
 <li><a href="Alterna6.jpg">Attack of the Alterna Zombies!</a>  (2009)
 <li><a href="Alterna7.jpg">Big Bad Book</a>    (2009)
-<li>Birth   (2008)
-<li>Blood for Stone     (2012)
+<li><a href="Alterna35.jpg">Blood for Stone</a>  (2012)
 <li><a href="Alterna4.jpg">Blood Realm</a> (2018)
-<li>Blood-Drenched Creature Double-Feature  (2013)
-<li>Cannons in the Clouds   (2016)
 <li><a href="Alterna10.jpg">Chair</a>   (2017)
-<li>Croak   (2017)
+<li><a href="Alterna36.jpg">Croak</a>   (2017)
 <li><a href="Alterna11.jpg">Cyko Ko!</a>  (2018)
-<li>Doppelgänger    (2017)
-<li>Eden    (2018)
-<li>Empire of the Wolf  (2014)
-<li>Exilium     (2018)
-<li>Fear Diaries    (2018)
+<li><a href="Alterna37.jpg">Doppelgänger</a> (2017)
+<li><a href="Alterna38.jpg">Eden</a> (2018)
+<li><a href="Alterna39.jpg">Exilium</a> (2018)
 <li><a href="Alterna12.jpg">Feast or Famine</a>     (2018)
-<li>FUBAR Empire of the Rising Dead     (2017)
-<li>Fubar: Better Red Than Dead     (2014)
+<li><a href="Alterna40.jpg">FUBAR Empire of the Rising Dead</a> (2017)
 <li><a href="Alterna13.jpg">Go West</a>  (2018)
 <li><a href="Alterna18.jpg">Gods and Gears</a>  (2019)
-<li>Horror in the West  (2012)
 <li><a href="Alterna19.jpg">ICYMI</a>   (2019)
-<li>IF Anthology    (2015)
 <li><a href="Alterna20.jpg">It Came Out on a Wednesday</a>  (2018)
-<li>Jesus Hates Zombies Featuring Lincoln Hates Werewolves  (2008)
-<li>Last West   (2014)
 <li><a href="Alterna21.jpg">Lilith Dark</a>     (2017)
-<li>Lilith Dark and the Beastie Tree    (2014)
 <li><a href="Alterna22.jpg">Metaphase</a>   (2015)
 <li><a href="Alterna23.jpg">Midnight Mystery</a>    (2018)
 <li><a href="Alterna24.jpg">Mighty Mascots</a>  (2019)
-<li>Monstrosity     (2013)
-<li>Morbid Myths    (2007)
+<li><a href="Alterna41.jpg">Morbid Myths</a>    (2007)
 <li><a href="Alterna14.jpg">Mother Russia</a>   (2015)
 <li><a href="Alterna15.jpg">Mr. Crypt</a>   (2017)
-<li>Novo    (2008)
 <li><a href="Alterna25.jpg">One-Dollar One-Shots: Baron Rat</a> (2018)
 <li><a href="Alterna26.jpg">Red Koi</a> (2019)
 <li><a href="Alterna27.jpg">Scrimshaw</a> (2017)
