--- a/Albatross/Albatross.html
+++ b/Albatross/Albatross.html
@@ -18,7 +18,15 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Albatross1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Albatross2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Albatross3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Albatross4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Albatross5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Albatross6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Albatross7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Albatross8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Albatross9.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -30,17 +38,15 @@ The Goon found a permanent home and a wider audience with DARK HORSE COMICS, but
 </p><p>
 Titles
 </p><p>
-<li>Chimichanga (2010)
-<li>Galaktikon (2017)
-<li>The Goon (2002)
-<li>Grumble (2018)
-<li>Grumble vs the Goon (2019)
+<li><a href="Albatross2.jpg">Chimichanga</a> (2010)
+<li><a href="Albatross3.jpg">Galaktikon</a> (2017)
+<li><a href="Albatross4.jpg">Goon</a> (2002)
+<li><a href="Albatross5.jpg">Grumble vs the Goon</a> (2019)
 <li><a href="../Hillbilly/Hillbilly.html">Hillbilly</a> (2016)
-<li>Mega Ghost (2018)
-<li>Namwolf (2017)
-<li>Pug Davis (2010)
-<li>Spook House (2016)
-<li>Spookhouse 2 (2018)
+<li><a href="Albatross6.jpg">Namwolf</a> (2017)
+<li><a href="Albatross7.jpg">Pug Davis</a> (2010)
+<li><a href="Albatross8.jpg">Spook House</a> (2016)
+<li><a href="Albatross9.jpg">Spookhouse 2</a> (2018)
 </p>
 
 </body>
