--- a/index.html
+++ b/index.html
@@ -11482,6 +11482,13 @@
 </tr>
 
 <tr>
+<td>Chimichanga</td>
+<td>2010</td>
+<td>Albatross</td>
+<td><a href="Albatross/Albatross.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Chimo</td>
 <td>2011</a>
 <td>Conundrum Press</td>
@@ -20503,6 +20510,13 @@
 </tr>
 
 <tr>
+<td>Galaktikon</td>
+<td>2017</td>
+<td>Albatross</td>
+<td><a href="Albatross/Albatross.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Galaxina</td>
 <td>1991</td>
 <td>Aircel</td>
@@ -21757,6 +21771,13 @@
 
 <tr>
 <td>Goon</td>
+<td>2002</td>
+<td>Albatross</td>
+<td><a href="Albatross/Albatross.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Goon</td>
 <td>2003</td>
 <td>Dark Horse</td>
 <td><a href="Goon/Goon.html">Details</a></td>
@@ -22250,6 +22271,13 @@
 <td>2003</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grumble vs the Goon</td>
+<td>2019</td>
+<td>Albatross</td>
+<td><a href="Albatross/Albatross.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36781,6 +36809,13 @@
 </tr>
 
 <tr>
+<td>Pug Davis</td>
+<td>2010</td>
+<td>Albatross</td>
+<td><a href="Albatross/Albatross.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pulp Fiction</td>
 <td>1997</td>
 <td>A List Comics</td>
@@ -41877,6 +41912,20 @@
 <td>1952</td>
 <td>Star Publications</td>
 <td><a href="Spook/Spook.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spook House</td>
+<td>2016</td>
+<td>Albatross</td>
+<td><a href="Albatross/Albatross.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spook House 2</td>
+<td>2018</td>
+<td>Albatross</td>
+<td><a href="Albatross/Albatross.html">Details</a></td>
 </tr>
 
 <tr>
